// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. video 1`] = `
<div
  data-testid="video-component"
>
  <video
    className="video-js"
    controls={true}
    data-account="[account id]"
    data-application-id={true}
    data-embed="default"
    data-player="[player id]"
    data-video-id="[video id]"
    id="[video id]-[account id]-1"
    poster="b9a31d3949b1882a09ed2f8508d538f3"
  />
</div>
`;

exports[`2. video without a poster image 1`] = `
<div
  data-testid="video-component"
>
  <video
    className="video-js"
    controls={true}
    data-account="[account id]"
    data-application-id={true}
    data-embed="default"
    data-player="[player id]"
    data-video-id="[video id]"
    id="[video id]-[account id]-2"
  />
</div>
`;
